# smartcontractpatternfinder

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .scpf.toml.example  .scpfignore  ACTIONABLE_IMPROVEMENTS.md  ALL_FAILING_TEMPLATES.md  AUDIT_TEST_RESULTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  COMPREHENSIVE_SOURCES.md  Cargo.toml  DAY5-6_PROGRESS.md  DAY5-6_SUMMARY.md  DAY7_COMPLETE.md  DAY7_REALITY.md  DEFILLAMA_INTEGRATION.md  EXPLOITABILITY_IMPLEMENTED.md  FINAL_SUMMARY.md  GLOBAL_SOURCES.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_IMPLEMENTED.md  LICENSE  LICENSE.md  OPUS_IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATION.md  POC_EXPLOITABLE_TEMPLATES.md  POC_IMPLEMENTATION_PLAN.md  POC_ONLY_SUCCESS.md  POC_VALIDATION_PLAN.md  PROOF_OF_DATA.md  QUALITY_ASSESSMENT.md  QUICK_REFERENCE.md  README.md  README_WEBAPP.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REPORT_STANDARDIZATION_RULES.md  ROADMAP.md  (+20 more)
benchmark_results/: benchmark_report.md
benchmarks/: README.md  accuracy.rs  accuracy_report.rs  benchmark_sarif.rs  check_status.sh  ground-truth.json  run_baseline.sh
crates/scpf-cli/: Cargo.toml
crates/scpf-cli/src/: cli.rs  commands.rs  error_helper.rs  filters.rs  keys.rs  main.rs  output.rs  pattern_builder.rs
crates/scpf-cli/src/commands/: audit.rs  fetch_zeroday.rs  init.rs  scan.rs  scan_common.rs  scan_recent.rs  scan_recent_0day.rs  templates.rs
crates/scpf-cli/tests/: accuracy_tests.rs  integration_tests.rs
crates/scpf-config/: Cargo.toml
crates/scpf-config/src/: api_keys.rs  lib.rs  runtime_env.rs  server.rs
crates/scpf-config/tests/: api_keys_tests.rs  runtime_env_tests.rs  server_tests.rs
crates/scpf-core/: Cargo.toml
crates/scpf-core/benches/: scanner_bench.rs
crates/scpf-core/src/: advanced_scanner.rs  cache.rs  chunking.rs  composition.rs  contract_type.rs  dataflow.rs  dependency_analyzer.rs  exploit_gen.rs  exploitability.rs  fetcher.rs  honeypot_filter.rs  ignore.rs  invariant_gen.rs  lib.rs  limits.rs  pattern_validator.rs  poc_stager.rs  regex_validator.rs  risk_scorer.rs  risk_scoring.rs  scanner.rs  scanner_test_repro.rs  semantic.rs  state_analysis.rs  taint.rs  template.rs  tests.rs  utils.rs  value_flow.rs  zeroday.rs
crates/scpf-core/src/analysis/: control_flow.rs  mod.rs  modifier_classifier.rs  symbol_collector.rs
crates/scpf-core/src/ast/: mod.rs
crates/scpf-core/src/ast/validators/: mod.rs
crates/scpf-core/src/tests/: contextual_filtering.rs  mod.rs
crates/scpf-core/src/utils/: hash.rs  retry.rs
crates/scpf-core/tests/: regex_test.rs  template_validation_test.rs
crates/scpf-server/: Cargo.toml
crates/scpf-server/src/: main.rs  runtime_paths.rs
crates/scpf-types/: Cargo.toml
crates/scpf-types/src/: api_key_config.rs  chain.rs  language.rs  lib.rs  semantic.rs  tests.rs
docs/: ACTION_MARKETPLACE_RELEASE_DRAFT.md  ADVANCED_AUDIT.md  API_KEY_SETUP.md  ARCHITECTURE_SOLUTION_REQUEST.md  AST_DESIGN.md  AST_IMPLEMENTATION_STATUS.md  AUDIT_DISCOVERIES.md  BENCHMARK_50_METHODOLOGY.md  BENCHMARK_50_RESULTS.md  BUG_FIXES.md  CHAIN_SUPPORT_STATUS.md  CHUNKED_SCANNING.md  CLI_ARGS_FIX.md  COMPOSITION_SUMMARY.md  DATA_FLOW_ANALYSIS.md  DATA_SOURCES.md  DAY1_PROGRESS.md  DAY2_AUDIT_COMPLETE.md  DAY2_COMPLETE.md  DAY3-4_PROGRESS.md  DAY3_COMPLETE.md  DAY3_FINAL_SUMMARY.md  DAY3_PATTERN_FIXES.md  DAY8_COMPLETE.md  DAY8_FINAL_SUMMARY.md  DAY8_SUMMARY.md  DEEP_AUDIT.md  ECOSYSTEM.md  ENHANCED_ANALYSIS.md  EVALUATION_RESPONSE.md  EXPLOITABILITY_SCORING.md  EXPORT_MESSAGES.md  EXTENDED_ANALYSIS.md  FALSE_POSITIVE_CRISIS.md  FETCH_ZERODAY.md  GITHUB_ACTION.md  GIT_DESCRIPTION.md  HARDENING_PROGRESS.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  (+45 more)
frontend/: index.html  package-lock.json  package.json  server-config.js  vite.config.js
frontend/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/resources/: .gitignore
frontend/src-tauri/src/: lib.rs  main.rs
scanners/: README.md  audit-7days-0day.sh  audit-7days.sh  ci-cd.sh  critical-only.sh  defi-focused.sh  full-audit-with-reports.sh  full-audit.sh  high-critical.sh  l2-chains.sh  medium-plus.sh  quick-scan.sh  zeroday-watch.sh
scripts/: analyze_poc_ability.sh  animate_banner.py  benchmark_50.sh  benchmark_cfg.sh  benchmark_templates.sh  extract_from_cache.py  extract_from_cache_xxh.py  extract_top20.sh  extract_top_contracts.sh  fetch_0day.sh  fetch_0day_news.sh  fetch_top10.sh  fetch_zerodays.sh  get_top20_pocable.sh  get_top40_pocable.sh  install_desktop_shortcut.sh  rank_by_both_metrics.sh  run_20_pages.sh  run_full_report.sh  scan_all_chains.sh  scan_and_analyze_poc.sh  scan_local.sh  scan_recent.sh  start-dev.sh  start-frontend.sh  test_direct.sh  test_filtering.sh  test_full_cli.sh  test_local_filtering.sh  test_new_templates.sh  test_refined_patterns.sh  test_templates.sh  test_v2_api.sh  validate_filtering.sh
sol/: large_test.sol  realistic_defi.sol  test_access_control.sol  test_execute_timelock.sol  test_fee_accounting.sol  test_internal_swap.sol  test_legacy.sol  test_modern.sol  test_precision_loss.sol  test_precision_loss_v2.sol  test_price_manipulation.sol  test_protected.sol  test_reward_inflation.sol  test_signature_replay.sol  test_timelock_missing.sol  test_unchecked_return_improved.sol  test_vulnerable_patterns.sol  test_weak_randomness.sol
tasks/: lessons.md  todo.md
templates/: access_control_bypass.yaml  advanced_audit.yaml  advanced_audit_fixed.yaml  cross_chain_gas_grief.yaml  cryptography-signatures.yaml  defi_vulnerabilities.yaml  delegatecall_user_input.yaml  denial-of-service.yaml  denial_of_service.yaml  erc1155_compliance.yaml  erc20_compliance.yaml  erc721_compliance.yaml  fee_accounting_flaw.yaml  flash_loan_attack_surface.yaml  flash_loan_callback.yaml  flash_loan_collateral.yaml  flash_loan_governance.yaml  flash_loan_state_manipulation.yaml  front_running.yaml  front_running_v2.yaml  honeypot_detection.yaml  integer_overflow_legacy.yaml  layer2-specific.yaml  logic_bugs_gas.yaml  precision_loss.yaml  (+27 more)
templates-regex/: reentrancy.yaml
(+81 files in other folders)
