[package]
name = "scpf-cli"
description = "CLI for Smart Contract Pattern Finder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "scpf"
path = "src/main.rs"

[dependencies]
scpf-core = { workspace = true }
scpf-types = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
walkdir = "2.4"
dotenvy = "0.15"
rand = "0.8"
regex = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
