[package]
name = "scpf-types"
description = "Core types for Smart Contract Pattern Finder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = "0.8"

[dev-dependencies]
serde_yaml = { workspace = true }
