[package]
name = "scpf-types"
description = "Core types for Smart Contract Pattern Finder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
petgraph = "0.6"
rustc-hash = "1.1"
smallvec = "1.11"


[dev-dependencies]
serde_yaml = { workspace = true }
